# rl-map-switcher

./: LICENSE  README.md  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  map_loader.rs  texture_installer.rs
src/components/: Map.tsx
